@@ -23,12 +23,12 @@
 // DATABASE CONFIGURATION
 
 //	$DB_TYPE	="ORACLE";
-	$DB_TYPE	="POSTGRESQL";
-//	$DB_TYPE	="MYSQL";
+//	$DB_TYPE	="POSTGRESQL";
+	$DB_TYPE	="MYSQL";
 	$DB_SERVER	="localhost";
-	$DB_DATABASE	="osmiy";
-	$DB_USER	="eugene";
-	$DB_PASSWORD	="123";
+	$DB_DATABASE	="demo";
+	$DB_USER	="root";
+	$DB_PASSWORD	="";
 // END OF DATABASE CONFIGURATION
 
 	global $USER_DETAILS;
